; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_http.c_task_push_http_post_transfer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_http.c_task_push_http_post_transfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"POST\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @task_push_http_post_transfer(i8* %0, i8* %1, i32 %2, i8* %3, i32 %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i64 @string_is_empty(i8* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %6
  store i8* null, i8** %7, align 8
  br label %28

18:                                               ; preds = %6
  %19 = load i8*, i8** %8, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @net_http_connection_new(i8* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %20)
  %22 = load i8*, i8** %8, align 8
  %23 = load i32, i32* %10, align 4
  %24 = load i8*, i8** %11, align 8
  %25 = load i32, i32* %12, align 4
  %26 = load i8*, i8** %13, align 8
  %27 = call i8* @task_push_http_transfer_generic(i32 %21, i8* %22, i32 %23, i8* %24, i32 %25, i8* %26)
  store i8* %27, i8** %7, align 8
  br label %28

28:                                               ; preds = %18, %17
  %29 = load i8*, i8** %7, align 8
  ret i8* %29
}

declare dso_local i64 @string_is_empty(i8*) #1

declare dso_local i8* @task_push_http_transfer_generic(i32, i8*, i32, i8*, i32, i8*) #1

declare dso_local i32 @net_http_connection_new(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
